apps/primos/service copy 2.yaml
apiVersion: v1
kind: Service
metadata:
  name: prime-server-service
  namespace: default
  labels:
    app: prime-server
    tier: backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 7070
    targetPort: 7070
    protocol: TCP
  selector:
    app: prime-server
  sessionAffinity: None
