apps/primos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prime-server-nodeport
  namespace: default
  labels:
    app: prime-server
    tier: backend
    service-type: nodeport
spec:
  type: NodePort
  ports:
  - name: http
    port: 7070
    targetPort: 80
    nodePort: 30080
    protocol: TCP
  selector:
    app: prime-server
  sessionAffinity: None
